--- a/templates/mb-er-counter/app/src/index.html
+++ b/templates/mb-er-counter/app/src/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/svg+xml" href="./logo.svg" />
-  <title>Bun + React</title>
-  <script type="module" src="./frontend.tsx" async></script>
+  <title>MagicBlock Counter</title>
+  <script type="module" src="./polyfills.ts"></script>
+  <script type="module" src="./frontend.tsx"></script>
 </head>
 
 <body>
